# stu

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  stu.cabal  tasks.md
.github/workflows/: haskell.yml
app/: AST.hs  Analysis.hs  CodeGen.hs  Main.hs  NumLang.hs  Parser.hs  Types.hs  Util.hs
app/Analysis/: Context.hs  DistDef.hs  Distribution.hs  Error.hs  Expr.hs  FunDef.hs
app/CodeGen/: Expr.hs  FunDef.hs  Python.hs  Util.hs
app/Parser/: Bijectors.hs  DistDef.hs  Distribution.hs  Expr.hs  FunDef.hs  Signature.hs  Types.hs  Util.hs
bench/: Bench.hs
lib/: fail.stu  std.stu
test/: Broadcasting.hs  Suite.hs
test/Tests/: Broadcasting.hs  Shapes.hs  Unification.hs
