cabal-version:      3.4
name:               stu
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             lancekmyers
maintainer:         lancekmyers@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
data-files: lib/std.stu
library 
    default-extensions:      
        OverloadedStrings, LambdaCase

    exposed-modules:
        AST, Types,
        CodeGen, CodeGen.Python, CodeGen.Expr, CodeGen.Util,
        CodeGen.FunDef,
        Analysis, Analysis.Context, Analysis.Error,
        Analysis.Expr, Analysis.Distribution, Analysis.FunDef, Analysis.DistDef,
        Parser, Parser.Types, Parser.Expr, Parser.Distribution,
        Parser.Util, Parser.Signature, Parser.Bijectors,
        Parser.DistDef, Parser.FunDef, 
        Util

    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        megaparsec == 9.2.*,
        parser-combinators == 1.3.*,
        text == 2.0.*, 
        text-builder == 0.6.7, 
        containers == 0.6.*, 
        mtl >= 2.2,
        recursion-schemes == 5.2.*, 
        vector >= 0.12, 
        prettyprinter == 1.7.*,
        prettyprinter-ansi-terminal == 1.1.*, 
        ansi-terminal >=0.4,
        fsnotify == 0.3.*, 
        filepath >= 1.3, 
        directory >=1.2.7,
        free == 5.*, 
        optparse-applicative == 0.17.*, 
        comonad == 5.*, 
        data-fix == 0.3.*, 
        diagnose == 2.4.*

    hs-source-dirs:   app
    default-language: Haskell2010


executable stu
    main-is:          Main.hs

    default-extensions:      
        OverloadedStrings, LambdaCase

    -- Modules included in this executable, other than Main.
    other-modules:
        AST, Types,
        CodeGen, CodeGen.Python, CodeGen.Expr, CodeGen.Util,
        CodeGen.FunDef,
        Analysis, Analysis.Context, Analysis.Error,
        Analysis.Expr, Analysis.Distribution, Analysis.FunDef, Analysis.DistDef,
        Parser, Parser.Types, Parser.Expr, Parser.Distribution,
        Parser.Util, Parser.Signature, Parser.Bijectors,
        Parser.DistDef, Parser.FunDef, 
        Util,
        Paths_stu


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        megaparsec == 9.2.*,
        parser-combinators == 1.3.*,
        text == 2.0.*, 
        text-builder == 0.6.*, 
        containers == 0.6.*, 
        mtl >= 2.2,
        recursion-schemes == 5.2.*, 
        vector >= 0.12, 
        prettyprinter == 1.7.*,
        prettyprinter-ansi-terminal == 1.1.*, 
        ansi-terminal >=0.4,
        fsnotify == 0.3.*, 
        filepath >= 1.3, 
        directory >=1.2.7,
        free == 5.*,
        optparse-applicative == 0.17.*, 
        comonad == 5.*,
        diagnose, 
        stu


    hs-source-dirs:   app
    default-language: Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Suite.hs
  other-modules:
        Broadcasting
  build-depends:       base ^>=4.16.1.0
                     , hspec ^>= 2.7.4
                     , QuickCheck >= 2.11
                     , vector
                     , text
                     , stu