cabal-version:      3.4
name:               stu
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             lancekmyers
maintainer:         lancekmyers@gmail.com

-- A copyright notice.
-- copyright:
-- category:


extra-source-files: CHANGELOG.md
data-files: lib/std.stu
library 
    default-extensions:      
        OverloadedStrings, LambdaCase

    exposed-modules:
        AST, Types,
        CodeGen, CodeGen.Python, CodeGen.Expr, CodeGen.Util,
        CodeGen.FunDef,
        Analysis, Analysis.Context, Analysis.Error,
        Analysis.Expr, Analysis.Distribution, Analysis.FunDef, Analysis.DistDef,
        Parser, Parser.Types, Parser.Expr, Parser.Distribution,
        Parser.Util, Parser.Signature, Parser.Bijectors,
        Parser.DistDef, Parser.FunDef, 
        Util
    -- other-extensions:
    
    build-depends:
        base ^>=4.16.1.0,
        megaparsec,
        parser-combinators,
        text, 
        text-builder, 
        containers, 
        mtl,
        recursion-schemes, 
        vector, 
        prettyprinter,
        prettyprinter-ansi-terminal, 
        ansi-terminal,
        filepath, 
        directory,
        free, 
        optparse-applicative, 
        comonad, 
        data-fix, 
        diagnose, 
        monad-validate,
        optics, 
        data-default

    hs-source-dirs:   app
    default-language: Haskell2010


executable stu
    main-is:          Main.hs

    default-extensions:      
        OverloadedStrings, LambdaCase

    -- Modules included in this executable, other than Main.
    other-modules:
        AST, Types,
        CodeGen, CodeGen.Python, CodeGen.Expr, CodeGen.Util,
        CodeGen.FunDef,
        Analysis, Analysis.Context, Analysis.Error,
        Analysis.Expr, Analysis.Distribution, Analysis.FunDef, Analysis.DistDef,
        Parser, Parser.Types, Parser.Expr, Parser.Distribution,
        Parser.Util, Parser.Signature, Parser.Bijectors,
        Parser.DistDef, Parser.FunDef, 
        Util,
        Paths_stu


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        megaparsec,
        parser-combinators,
        text,
        text-builder,
        containers,
        mtl,
        recursion-schemes, 
        vector,
        prettyprinter,
        prettyprinter-ansi-terminal, 
        ansi-terminal,
        optics,
        filepath,
        directory,
        free,
        optparse-applicative, 
        comonad,
        diagnose, 
        monad-validate,
        stu, 
        data-default


    hs-source-dirs:   app
    default-language: Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Suite.hs
  other-modules:
        Tests.Broadcasting,
        Tests.Unification,
        Tests.Shapes
  build-depends:       base ^>=4.16.1.0
                     , QuickCheck >= 2.11
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , vector
                     , text
                     , stu

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:   "-with-rtsopts=-A32m"
  if impl(ghc >= 8.6)
    ghc-options: -fproc-alignment=64
  -- other-modules:
  build-depends:       base ^>=4.16.1.0
                , stu
                , tasty
                , tasty-bench